--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "build": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Otavio Vinicius Rojas",
+  "author": "Secretaria Regional da Música",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "chart.js": "^3.9.1",
+    "chartjs-plugin-datalabels": "^2.0.0",
+    "datatables.net": "^1.13.6",
+    "datatables.net-dt": "^1.13.6",
+    "jquery": "^3.6.0",
+    "sweetalert2": "^11.7.3",
     "@supabase/supabase-js": "^2.39.3",
     "pg": "^8.11.3",
     "axios": "^1.7.2",
